Patricks Daten hinzugefügt

--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
           <td>OS X</td>
           <td>Details</td>
         </tr>
+        <tr>
+          <td>Patrick</td>
+          <td>Emmerich</td>
+          <td>patrick.emmerich@tngtech.com</td>
+          <td>Bruchsal, D</td>
+          <td>Mathematik</td>
+          <td>Java</td>
+          <td>Linux</td>
+          <td>Details</td>
+        </tr>
+	<tr>
+          <td>Martina</td>
+          <td>Schäfer</td>
+          <td>martina.schaefer@tngtech.com</td>
+          <td>Karlsruhe, D</td>
+          <td>Physik</td>
+          <td>Java</td>
+          <td>Linux</td>
+          <td>Details</td>
+        </tr>
       </table>
     </div>
   </div>
