Andreas Gross added

--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
           <td>Details</td>
         </tr>
         <tr>
-          <td>Patrick</td>
-          <td>Emmerich</td>
-          <td>patrick.emmerich@tngtech.com</td>
-          <td>Bruchsal, D</td>
-          <td>Mathematik</td>
-          <td>Java</td>
-          <td>Linux</td>
+          <td>Andreas</td>
+          <td>Groß</td>
+          <td>andreas.gross@tngtech.com</td>
+          <td>Deutschland</td>
+          <td>Physik</td>
+          <td>Java, C++, Python</td>
+          <td>Ubuntu</td>
           <td>Details</td>
         </tr>
-
       </table>
     </div>
   </div>
