added new table entries

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
           <td>OS X</td>
           <td>Details</td>
         </tr>
+	<tr>
+          <td>Benjamin</td>
+          <td>Weimer</td>
+          <td>benjamin.weimer@tngtech.com</td>
+          <td>Deutschland</td>
+          <td>Mathematik</td>
+          <td>Java, R</td>
+          <td>Ubuntu</td>
+          <td>Details</td>
+        </tr>
         <tr>
           <td>Patrick</td>
           <td>Emmerich</td>
@@ -41,7 +51,6 @@
           <td>Linux</td>
           <td>Details</td>
         </tr>
-
       </table>
     </div>
   </div>
